# RateExplorer

./: .gitignore  parse.py  utils.py
aerosol_xsections/: .gitignore  CMakeLists.txt  fractal.py  khare1984.py  khare1984frac.py  main.py  marsdust.py  palmer1975.py  utils.py
aerosol_xsections/src/: adgaquad_mod.F90  fractal_meanfield_mod.F90  fractal_meanfield_mod_c.F90  lusolvec_mod.F90
experiments/: README.md
experiments/10-02-23/: README.md  rates.ipynb  rates.py  shamithermo_test.yaml  thermodata120_test.yaml  thermodata121_test.yaml  utils.py
experiments/4-18-24/: README.md  fit_rate.py  thermodata121_test.yaml  utils.py
experiments/5-29-24/: README.md  rates.ipynb  thermodata121_test.yaml
kevindata/: composition.yaml  thermodata120_2-10-2021.rx
reactioncitations/: Eridani_re_revised.tex  all_reactions_half_auto2.tex  bib.bib  citations.csv  citations.py  dois.yaml  zahnle_earth_v0.20_cite.yaml  zahnle_earth_v0.20_cite_short.yaml
saturation_thermo/: C2H2.py  C2H4.py  C2H6.py  CH3CN.py  CH4.py  CO2.py  H2O.py  H2SO4.py  H2SO4_H2O.py  HCCCN.py  HCN.py  N2O.py  NH3.py  README.md  S2.py  S3.py  S4.py  S8.py  fitting.py  main.py  metadata.yaml  sulfuric_acid.f90  thermodata121.yaml  utils.py  zeleznik.py
saturation_thermo/data/: H2O_highT.txt  H2O_lowT.txt
thermodynamics/: README.md  lowT.py  thermodata121.yaml  thermodata121_wHe_Tlim.rx  utils.py
xsections/: .gitignore  C.py  C2.py  C2H.py  C2H2.py  C2H4.py  C2H6.py  C3H6.py  C4H2.py  C4H4.py  CH.py  CH2.py  CH2CO.py  CH2N2.py  CH3.py  CH3CHO.py  CH3CN.py  CH3OH.py  CH4.py  CN.py  CO.py  CO2.py  CS.py  CS2.py  Cl.py  Cl2.py  ClO.py  H.py  H2.py  H2CO.py  H2O.py  H2O2.py  H2S.py  H2SO4.py  HCCCN.py  HCN.py  HCO.py  HCl.py  HNCO.py  HNO3.py  (+33 more)
xsections/Zahnle_Kevin_data/: stuff_for_nick.f
xsections/data/: Bass1953_S8.txt  JPL19_NO2.txt  (+16 more)
zahnledata/: README.md  composition.yaml  lowT.py  parse.py  rotational_dof.yaml  thermodata121.rx  thermodata122.yaml  utils.py
(+4 files in other folders)
